Change Login Parameters
Changing Username e-mail address, password and access token

--- a/examples/login/login.html
+++ b/examples/login/login.html
@@ -6,9 +6,9 @@
 	<script src="https://cdn.jsdelivr.net/particle-api-js/5/particle.min.js"></script>
 	<script>
 		var particle = new Particle();
-		particle.login({ username: 'name@example.com', password: 'password' })
+		particle.login({ username: 'hwbrill@brill6pak.com', password: 'Bri1l0Sio' })
 			.then(function(result) {
-				console.log('Your access token', result.body.access_token);
+				console.log('2b0040000a47343337373738', result.body.access_token);
 			}, function(err) {
 				console.error(err);
 			});
